added the profile endpoints to manage profiles

--- a/resources/lang/en/errors.json
+++ b/resources/lang/en/errors.json
@@ -1,3 +1,4 @@
 {
-  "unavailable": "The { resource } specified does not exist"
+  "unavailable": "The { resource } specified does not exist",
+  "unactionable": "You cannot { action } { state } { resource }"
 }
